# ESLF

./: .clang-format  .coveringconfig  .gitignore  .gitmodules  .gitmodules.bak  .runsettings  .sonarcloud.properties  CMakeLists.txt  CMakePresets.json  Dockerfile  DockerfileBuildEnv  ELSF.code-workspace  Electronic-Leadscrew-Framework.code-workspace  Makefile  README.md  compose-dev.yaml  coverage.sh  meson.build  meson_options.txt
.devcontainer/: Dockerfile  compose-dev.yaml  devcontainer.json
.github/workflows/: cmake-multi-platform.yml
coverage/: CMakeLists.txt
include/Device/: Axis.hpp  EncoderSimulator.hpp  Spindle.hpp  VirtualMotorEncoder.hpp
include/Device/Spindle/: Spindle.hpp
include/Encoder/: IEncoder.hpp
include/Logging/: Errors.hpp  Logger.hpp
include/Machine/: Planner.hpp
include/Machine/FSM/: EStop.hpp  Idle.hpp  Machine.hpp  Running.hpp
include/Machine/MessageBus/: Router.hpp  Subscription.hpp
include/Position/: Position.hpp
include/State/: Position.hpp
include/State/Machine/: EStop.hpp  Idle.hpp  Loop.hpp  Machine.hpp  MasterPosition.hpp  Messages.hpp  Running.hpp
include/State/MessageBus/: Broker.hpp  MachineRouter.hpp  MessageBus.hpp  Messages.hpp  Router.hpp  Subscription.hpp
lib/etl/: gitdir
lib/etl/cmake/: helpers.cmake
lib/etl/include/etl/: singleton.h
oldfsm/: Base.cpp  Base.hpp  Idle.hpp  Moving.cpp  Stopped.cpp  Stopped.hpp  Turning.hpp
src/Device/: Axis.hpp  EncoderSimulator.cpp  EncoderSimulator.hpp  IAxis.hpp  IEncoder.hpp  IMotor.hpp  LatheAxis.hpp  Spindle.hpp  VirtualEncoder.cpp  VirtualEncoder.hpp  VirtualMotor.cpp  VirtualMotor.hpp  VirtualMotorEncoder.hpp
src/Encoder/: IEncoder.cpp
src/Logging/: Errors.cpp  Logger.cpp  Logger.hpp
src/Machine/: CoordinateSystem.hpp  Planner.hpp
src/Machine/FSM/: Base.cpp  Base.hpp  EStop.cpp  EStop.hpp  Idle.cpp  Idle.hpp  Machine.cpp  Machine.hpp  Moving.cpp  Moving.hpp  Running.cpp  Running.hpp  Stopped.cpp  Stopped.hpp  Turning.cpp  Turning.hpp
src/Machine/FSM/Movement/: Base.hpp  CommonEvents.hpp  EventBase.hpp  EventFactory.hpp  EventTypes.hpp  Events.hpp  Movement_event_data.hpp  Movement_generated_states.cpp  Movement_generated_states.hpp  Root.hpp  SM.hpp  Turning.hpp  deep_history_state.hpp  shallow_history_state.hpp  state_base.hpp
src/Machine/Manager/: LatheZ.hpp  Manager.hpp
src/Machine/MessageBus/: Broker.hpp  MachineRouter.cpp  MachineRouter.hpp  Messages.cpp  Messages.hpp  Router.hpp  Subscription.cpp  Subscription.hpp
src/Machine/Planner/: Planner.hpp  Planner1.hpp  ZOnly.cpp  ZOnly.hpp
src/Position/: Position.cpp  Stuff.cpp
src/State/: Position.cpp  Position.hpp
src/State/Machine/: EStop.cpp  Idle.cpp  Machine.cpp  Running.cpp
src/State/MessageBus/: MachineRouter.cpp  Messages.cpp  Router.cpp
subprojects/: etl
test/: CMakeLists.txt  DartConfiguration.tcl  DefaultUnitTest.hpp  etl_profile.h  main.cpp  meson.build  setup.hpp
test/Device/: test_Planner.cpp  test_VirtualEncoder.cpp
test/Encoder/: test_Encoder.cpp
test/Logger/: test_logger.cpp
test/Machine/FSM/: test_Machine.cpp  test_estop.cpp  test_fsm.hpp  test_init.cpp  test_running.cpp  test_turning.cpp
test/Machine/FSM/Movement/: Readme.md  sml_example.cpp  test_Movement_hfsm.cpp  test_Root.cpp
test/Machine/Manager/: test_Manager.cpp
test/Machine/MessageBus/: test_MachineSubscription.cpp  test_message_routing.cpp  test_messages.cpp
test/Machine/Planner/: test_Planner.cpp
test/Mocks/: MockLogBackend.hpp
test/Mocks/Logging/: MockLogBackend.hpp
test/Mocks/Machine/FSM/: MockMachine.hpp
test/Mocks/Machine/MessageBus/: MockMachineRouter.hpp
test/Mocks/Position/: MockPosition.hpp
test/Mocks/State/: MockPosition.hpp
test/Mocks/State/Machine/: MockMachine.hpp
test/Mocks/State/MessageBus/: MockMachineRouter.hpp
test/Position/: test_GetCounterPeriod.cpp  test_GettersSetters.cpp  test_Positions.cpp  test_Sync.cpp
test/State/FSM/: test_estop.cpp  test_init.cpp  test_running.cpp
test/State/Machine/: test_estop.cpp  test_init.cpp  test_running.cpp  transition.hpp
test/State/MessageBus/: test_message_routing.cpp  test_messages.cpp
test/TestHelpers/: DefaultUnitTest.hpp  Message.cpp  Message.hpp
test/TestHelpers/Logging/: LoggingUnitTest.hpp  TestLogBackend.hpp
webgme-hfsm/output/: Movement_event_data.hpp  Movement_generated_states.cpp  Movement_generated_states.hpp  Movement_metadata.json  deep_history_state.hpp  shallow_history_state.hpp  state_base.hpp
webgme-hfsm/src/common/Templates/bgs/: BGSTemplates.js
webgme-hfsm/src/decorators/UMLStateMachineDecorator/PartBrowser/: UMLStateMachineDecorator.PartBrowserWidget.scss
